<resources>
    <string name="app_name">TaskManagement</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_schedule">Schedule</string>
    <string name="menu_all_task">All Task</string>
    <string name="menu_compled_task">Completed Task</string>
    <string name="menu_kpt">KPT</string>
    <string name="menu_register_master_data">Register master data</string>
    <string name="menu_master_data_category_list">Category</string>
    <string name="menu_master_data_category_edit">Category</string>

<!--一般名詞-->
    <string name="calender">カレンダー</string>
    <string name="dummyDate">yy-mm-dd</string>
    <string name="register">登録</string>
    <string name="update">更新</string>

<!--登録画面-->
    <string name="register_task_dialog_fragment_select_date">-- 日付 --</string>
    <string name="register_task_dialog_fragment_select_time">-- 時刻 --</string>
    <string-array name="priority_list">
        <item>設定なし</item>
        <item>低</item>
        <item>中</item>
        <item>高</item>
    </string-array>

    <!--AllTask画面-->
    <string name="all_task_fragment_toggle">スケジュール未定タスクのみ表示</string>
    <!--Schedule画面-->
    <string name="schedule_fragment_toggle">未完了のみ表示</string>

</resources>