<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_schedule"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/menu_schedule" />
        <item
            android:id="@+id/nav_all_task"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/menu_all_task" />
        <item
            android:id="@+id/nav_compled_task"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_compled_task" />
        <item
            android:id="@+id/nav_kpt"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_kpt" />
    </group>
</menu>