<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_schedule">

    <fragment
        android:id="@+id/nav_schedule"
        android:name="com.Taskmanagement.ui.schedule.ScheduleFragment"
        android:label="@string/menu_schedule"
        tools:layout="@layout/fragment_disp_tsk_base" />

    <fragment
        android:id="@+id/nav_all_task"
        android:name="com.Taskmanagement.ui.allTask.AllTaskFragment"
        android:label="@string/menu_all_task"
        tools:layout="@layout/fragment_disp_tsk_base" />

    <fragment
        android:id="@+id/nav_compled_task"
        android:name="com.Taskmanagement.ui.completedTask.CompletedTaskFragment"
        android:label="@string/menu_compled_task"
        tools:layout="@layout/fragment_completed_task" />

    <fragment
        android:id="@+id/nav_kpt"
        android:name="com.Taskmanagement.ui.kpt.KptFragment"
        android:label="@string/menu_kpt"
        tools:layout="@layout/fragment_completed_task" />

    <fragment
        android:id="@+id/nav_register_master_data"
        android:name="com.Taskmanagement.ui.registerMasterData.RegisterMasterDataFragment"
        android:label="@string/menu_register_master_data"
        tools:layout="@layout/fragment_register_master_data">
        <action
            android:id="@+id/action_registerMasterDataFragment_to_masterDataCategoryViewFragment"
            app:destination="@id/nav_master_data_category_list" />
    </fragment>

    <fragment
        android:id="@+id/nav_master_data_category_list"
        android:name="com.Taskmanagement.ui.masterDataCategoryList.MasterDataCategoryListFragment"
        android:label="@string/menu_master_data_category_list"
        tools:layout="@layout/fragment_master_data_category_list">
        <action
            android:id="@+id/action_masterDataCategoryListFragment_to_masterDataCategoryEditFragment"
            app:destination="@id/nav_master_data_category_edit" />
    </fragment>

    <fragment
        android:id="@+id/nav_master_data_category_edit"
        android:name="com.Taskmanagement.ui.masterDataCategoryEdit.MasterDataCategoryEditFragment"
        android:label="@string/menu_master_data_category_edit"
        tools:layout="@layout/fragment_master_data_category_edit" />

    <fragment
        android:id="@+id/taskRegisterDialogFragment"
        android:name="com.Taskmanagement.ui.registerTask.RegisterTaskDialogFragment"
        android:label="タスク登録"
        tools:layout="@layout/dialog_register_task" />

</navigation>